test/schemas/fail/reserved.sat
// ERROR: schemas/fail/reserved.sat(2): Reserved identifier ($) is not allowed in declarations: $struct
struct $struct {
    // ERROR: schemas/fail/reserved.sat(4): Reserved identifier ($) is not allowed in declarations: $field
    int32 $field;
}

// ERROR: schemas/fail/reserved.sat(8): Reserved identifier ($) is not allowed in declarations: $enum
enum $enum {
    // ERROR: schemas/fail/reserved.sat(10): Reserved identifier ($) is not allowed in declarations: $enum.$item
    $item = 1
}
